--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-<h1>Hello World!</h1>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Archive</title>
+<style>
+  body{margin:0;font-family:system-ui,Arial,sans-serif;display:flex;height:100vh}
+  nav{width:320px;overflow:auto;border-right:1px solid #ddd;padding:12px;box-sizing:border-box}
+  main{flex:1;overflow:auto;padding:20px;box-sizing:border-box}
+  .item{display:block;padding:8px;border-radius:6px;text-decoration:none;color:inherit;margin-bottom:6px}
+  .date{font-size:0.9em;color:#444;display:block}
+  .score-badge{display:inline-block;padding:3px 6px;border-radius:4px;font-weight:600;margin-right:8px}
+</style>
+</head>
+<body>
+  <nav id="sidebar"><h2>Articles</h2><div id="list"></div></nav>
+  <main id="content"><p>Select an article</p></main>
+
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script>
+async function loadIndex(){
+  const res = await fetch('index.json');
+  const idx = await res.json();
+  const list = document.getElementById('list');
+  idx.forEach(item=>{
+    const a = document.createElement('a');
+    a.href = "#"+item.filename;
+    a.className = 'item';
+    const hue = (item.score||0)*13; // 0..117
+    const badge = '<span class="score-badge" style="background:hsl('+hue+',70%,75%)">'+(item.score||0)+'</span>';
+    a.innerHTML = badge + '<strong>'+escapeHtml(item.title)+'</strong><span class="date">'+formatDate(item.date)+'</span>';
+    list.appendChild(a);
+  });
+  // load hash or first item
+  if(location.hash) loadArticle(location.hash.slice(1));
+  else if(idx.length) loadArticle(idx[0].filename);
+  window.addEventListener('hashchange',()=>loadArticle(location.hash.slice(1)));
+}
+
+function formatDate(d){
+  if(!d) return '';
+  return d.slice(0,4)+'-'+d.slice(4,6)+'-'+d.slice(6,8);
+}
+function escapeHtml(s){ return (s||'').replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
+
+async function loadArticle(filename){
+  if(!filename) return;
+  try{
+    const r = await fetch('posts/'+filename);
+    if(!r.ok) { document.getElementById('content').innerHTML = '<p>Cannot load file.</p>'; return; }
+    const md = await r.text();
+    // Optionally strip title/score lines if you store them at top. Adjust as needed.
+    document.getElementById('content').innerHTML = marked.parse(md);
+    window.scrollTo(0,0);
+  }catch(e){
+    document.getElementById('content').innerHTML = '<p>Error loading.</p>';
+    console.error(e);
+  }
+}
+
+loadIndex();
+</script>
+</body>
+</html>
