--- a/index.html
+++ b/index.html
@@ -38,16 +38,28 @@ async function loadIndex(){
   window.addEventListener('hashchange',()=>loadArticle(location.hash.slice(1)));
 }
 
-function formatDate(d){
-  if(!d) return '';
-  return d.slice(0,4)+'-'+d.slice(4,6)+'-'+d.slice(6,8);
+function formatDate(d) {
+  if (!d) return '';
+
+  // Already YYYY-MM-DD
+  if (/^\d{4}-\d{2}-\d{2}$/.test(d)) {
+    return d;
+  }
+
+  // YYYYMMDD
+  if (/^\d{8}$/.test(d)) {
+    return d.slice(0,4) + '-' + d.slice(4,6) + '-' + d.slice(6,8);
+  }
+
+  // Unknown format
+  return '';
 }
 function escapeHtml(s){ return (s||'').replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
 
 async function loadArticle(filename){
   if(!filename) return;
   try{
-    const r = await fetch('posts/'+filename);
+    const r = await fetch('responses/'+filename);
     if(!r.ok) { document.getElementById('content').innerHTML = '<p>Cannot load file.</p>'; return; }
     const md = await r.text();
     // Optionally strip title/score lines if you store them at top. Adjust as needed.
